[tool.poetry]
name = "pyspark-assert"
version = "0.1.0"
description = "Simple unit testing library for PySpark."
authors = ["Soy-yo"]
readme = "README.md"
packages = [{include = "pyspark_assert"}]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
